--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav class="topbar">
     <div class="wrap">
       <a class="brand" href="#home">
-        <img src="./assets/logo.png" alt="DraftOne logo">
+        <img src="./logo.png" alt="DraftOne logo">
       </a>
       <ul class="menu" id="menu">
         <li><a href="#about">About</a></li>
@@ -28,7 +28,7 @@
 
   <!-- Full-width banner image -->
   <div class="hero-banner">
-    <img src="./assets/banner.jpg" alt="DraftOne projects banner">
+    <img src="./banner.jpg" alt="DraftOne projects banner">
   </div>
 
   <!-- Hero text under the banner -->
